--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -22,3 +22,8 @@
   color: #fff;
   text-decoration: none;
 }
+@media screen and (max-width: 480px) {
+  #footer {
+    flex-direction: column;
+  }
+}
