--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,8 +1,7 @@
 .projects {
   display: flex;
   text-align: start;
-  width: 100%;
-  margin-top: 10vh;
+  min-width: 100%;
   line-height: 2rem;
   flex-direction: column;
   align-items: center;
@@ -38,5 +37,9 @@
 @media screen and (max-width: 480px) {
   .cards {
     flex-direction: column;
+  }
+  .projects h1 {
+    text-align: center;
+    width: 90%;
   }
 }
